--- a/WebApp/Views/Consultation/Index.cshtml
+++ b/WebApp/Views/Consultation/Index.cshtml
@@ -39,7 +39,7 @@
 
     <div class="x_panel" style="margin-bottom: 190px;">
         <div class="x_title">
-            <h2>Call History</h2>
+            <h2>Consult History</h2>
             <ul class="nav navbar-right panel_toolbox">
                 <li>
                     <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
