--- a/WebApp/Views/Shared/_LayoutPage.cshtml
+++ b/WebApp/Views/Shared/_LayoutPage.cshtml
@@ -215,7 +215,7 @@
     <script src="~/Scripts/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         setInterval(function () {
-            if ('@SessionHandler.IsExpired') {
+              if ('@SessionHandler.IsExpired'=='False') {
                 window.location.href = '@Url.Action("AdminLogin","Account")';
             }
         }, 60*1000);
