--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -300,7 +300,8 @@
     <script>
 
         setInterval(function () {
-             if ('@SessionHandler.IsExpired'=='True')
+            if ('@SessionHandler.IsExpired')
+            {
                 window.location.href = '@Url.Action("DoctorLogin","Account")';
             }
            $.ajax({
