testing issues on sheet

--- a/WebApp/Views/Patient/SeeDoctor.cshtml
+++ b/WebApp/Views/Patient/SeeDoctor.cshtml
@@ -524,7 +524,7 @@
                                                 <table class="table" style="margin-bottom: 5px;">
                                                     <tbody>
                                                         <tr>
-                                                            <td style="border-top: none"><h2>Do you have any allergies or Drug Sensitivities?</h2></td>
+                                                            <td style="border-top: none"><h2>Do you have any allergies or Drug Severities?</h2></td>
                                                             <td style="border-top: none"></td>
                                                             <td style="border-top: none"></td>
                                                             <td style="border-top: none">
