--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -559,7 +559,7 @@
                                         <table class="table" style="margin-bottom: 5px;">
                                             <tbody>
                                                 <tr>
-                                                    <td style="border-top: none"><h2>Do you have any allergies or Drug Sensitivities?</h2></td>
+                                                    <td style="border-top: none"><h2>Do you have any allergies or Drug Severities?</h2></td>
                                                     <td style="border-top: none"></td>
                                                     <td style="border-top: none"></td>
                                                     <td style="border-top: none">
@@ -582,7 +582,7 @@
                                                         <div class="form-group">
                                                             <div style="color:red;display:none" id="divsensitivity"><label></label></div>
                                                             <select class="form-control" id="Sensitivity" style="display:block">
-                                                                <option value="">Choose Sensitivity</option>
+                                                                <option value="">Choose Severity</option>
 
                                                             </select>
                                                         </div>
