--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -420,13 +420,17 @@
                         FirstName: '@SessionHandler.UserInfo.FirstName',
                         LastName: '@SessionHandler.UserInfo.LastName',
                         UserType: 'Doctor'
-                    });
+                    }).done(function () {
+                    console.log("New user has joined... invoke all patients event");
+                    chat.server.getUsersPatient();
+                  
+                });
 
-                chat.server.adminJoinDoctor().done(function () {
+             /*   chat.server.adminJoinDoctor().done(function () {
                     //alert("New doctor has joined... Refresh list;");
                     chat.server.getUsersPatient();
                     chat.server.getUsersDoctor();
-                });
+                });*/
 
             });
 
