session work and blank default page,rov admin, calendar style on profile

--- a/WebApp/Views/Shared/_LayoutPage.cshtml
+++ b/WebApp/Views/Shared/_LayoutPage.cshtml
@@ -91,6 +91,7 @@
                                     <li>
                                     <a><i class="fa fa-database"></i>Setup Forms <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
+                                        <li>@Html.ActionLink("Create Reason of Visit", "../ROV_Admin/Create")</li>
                                         <li>@Html.ActionLink("Create Allergy", "../Allergy_Admin/Create")</li>
                                         <li>@Html.ActionLink("Create City", "../City_Admin/Create")</li>
                                         <li>@Html.ActionLink("Create Document Type", "../DocumentType_Admin/Create")</li>
