reason phrase added

--- a/WebApp/Views/Shared/_LayoutPage.cshtml
+++ b/WebApp/Views/Shared/_LayoutPage.cshtml
@@ -199,9 +199,16 @@
             <!-- footer content -->
            
             <footer>
-                <div>
-                    <center><a href="#">SwiftKare</a></center>
-</div>
+                <div class="bdr-l">
+                    <div class="row">
+                        <div class="col-md-12 text-center">
+                            <p>
+                                Copyright &copy;
+                                <script language="JavaScript" type="text/javascript">document.write((new Date()).getFullYear());</script><a href="#"> | SwiftKare</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 <div class="clearfix"></div>
             </footer>
                
