Space between Add Allergy and Reset, Choose Sensitivity to "Choose Severity"

--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -600,7 +600,7 @@
                                                     <td>
                                                         <div style="color:red;display:none" id="btnallergy"><label></label></div>
                                                         <button id="resetallergy" class="btn btn-primary" style="max-width: 200px; float: right; margin-right: 0;display:block" type="button">Reset</button>&nbsp;
-                                                        <button id="addallergy" class="btn btn-primary" style="max-width: 200px; float: right; margin-right: 0;display:block" type="button">Add Allergy</button>
+                                                        <button id="addallergy" class="btn btn-primary" style="max-width: 200px; float: right; margin-right: 5px;display:block" type="button">Add Allergy</button>
 
                                                     </td>
                                                 </tr>
