--- a/WebApp/Views/MyHealth/Index.cshtml
+++ b/WebApp/Views/MyHealth/Index.cshtml
@@ -266,7 +266,7 @@
                                                                 <div class="form-group">
                                                                     <div style="color:red;display:none" id="divsensitivity"><label></label></div>
                                                                     <select class="form-control" id="Sensitivity" style="display:block">
-                                                                        <option value="">Choose Sensitivity</option>
+                                                                        <option value="">Choose Severity</option>
 
                                                                     </select>
                                                                 </div>
@@ -283,8 +283,8 @@
                                                             </td>
                                                             <td>
                                                                 <div style="color:red;display:none" id="btnallergy"><label></label></div>
-                                                                <button id="resetallergy" class="btn btn-primary" style="max-width: 200px; float: right; margin-right: 0;display:block" type="button">Reset</button>&nbsp;
-                                                                <button id="addallergy" class="btn btn-primary" style="max-width: 200px; float: right; margin-right: 0;display:block" type="button">Add Allergy</button>
+                                                                <button id="resetallergy" class="btn btn-primary" style="max-width: 200px; float: right; margin-right: 0;display:block" type="button">Reset</button>
+                                                                <button id="addallergy" class="btn btn-primary" style="max-width: 200px; float: right; margin-right: 5px;display:block" type="button">Add Allergy</button>
 
                                                             </td>
                                                         </tr>
