doctor search criteria and date control

--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -1187,13 +1187,22 @@
         });
     }
 
-    $('#searchdate').bootstrapMaterialDatePicker
-            ({
-                time: false,
-                clearButton: true,
-                format: 'DD/MM/YYYY ',
+    //$('#searchdate').bootstrapMaterialDatePicker
+    //        ({
+    //            time: false,
+    //            clearButton: true,
+    //            format: 'DD/MM/YYYY ',
 
-            });
+    //        });
+    $('#searchdate').daterangepicker({
+        singleDatePicker: true,
+        showDropdowns: false,
+        calender_style: "picker_2",
+        format: 'DD/MM/YYYY ',
+        minDate: new Date()
+    }, function (start, end, label) {
+        console.log(start.toISOString(), end.toISOString(), label);
+    });
 
 
     $("#fetchdate").daterangepicker({
