remaining issues on sheet

--- a/WebApp/Views/Appointment/PartialViewDetail.cshtml
+++ b/WebApp/Views/Appointment/PartialViewDetail.cshtml
@@ -146,7 +146,7 @@
                 <img src="@Model.DoctorVM.ProfilePhotoBase64" alt="" class="m-b-10 img-responsive">
             </div>
             <div class="name-sec">
-                <h2>Dr.@doctorName</h2>
+                <h2>@doctorName</h2>
                 <p style="font-size:10px">
                     @age<br>@*<span>Gender: @gender</span>*@
                     Gender: @gender<br>
