--- a/WebApp/Views/Consultation/PartialViewDetail.cshtml
+++ b/WebApp/Views/Consultation/PartialViewDetail.cshtml
@@ -107,7 +107,7 @@
                 <img src="@(Model.DoctorVM.ProfilePhotoBase64)" alt="" class="m-b-10 img-responsive">
             </div>
             <div class="name-sec">
-                <h2>Dr.@doctorName</h2>
+                <h2>@doctorName</h2>
                 <p style="font-size:10px">
                     Age:@age<br>
                     Gender: @gender<br>
